--- a/proj/win32/libuv.vcxproj
+++ b/proj/win32/libuv.vcxproj
@@ -11,17 +11,53 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\uvhttp\uvhttp_internal.c" />
-    <ClCompile Include="..\..\src\uvhttp\uvhttp.c" />
+    <ClCompile Include="..\..\src\libuv\src\fs-poll.c" />
+    <ClCompile Include="..\..\src\libuv\src\inet.c" />
+    <ClCompile Include="..\..\src\libuv\src\threadpool.c" />
+    <ClCompile Include="..\..\src\libuv\src\uv-common.c" />
+    <ClCompile Include="..\..\src\libuv\src\version.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\async.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\core.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\dl.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\error.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\fs-event.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\fs.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\getaddrinfo.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\getnameinfo.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\handle.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\loop-watcher.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\pipe.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\poll.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\process-stdio.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\process.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\req.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\signal.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\stream.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\tcp.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\thread.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\timer.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\tty.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\udp.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\util.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\winapi.c" />
+    <ClCompile Include="..\..\src\libuv\src\win\winsock.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\uvhttp\uvhttp_internal.h" />
-    <ClInclude Include="..\..\src\uvhttp\uvhttp.h" />
+    <ClInclude Include="..\..\src\libuv\src\heap-inl.h" />
+    <ClInclude Include="..\..\src\libuv\src\queue.h" />
+    <ClInclude Include="..\..\src\libuv\src\uv-common.h" />
+    <ClInclude Include="..\..\src\libuv\src\win\atomicops-inl.h" />
+    <ClInclude Include="..\..\src\libuv\src\win\handle-inl.h" />
+    <ClInclude Include="..\..\src\libuv\src\win\internal.h" />
+    <ClInclude Include="..\..\src\libuv\src\win\req-inl.h" />
+    <ClInclude Include="..\..\src\libuv\src\win\stream-inl.h" />
+    <ClInclude Include="..\..\src\libuv\src\win\winapi.h" />
+    <ClInclude Include="..\..\src\libuv\src\win\winsock.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{C76B146A-981E-45C4-B530-C9EE7C37C3C6}</ProjectGuid>
+    <ProjectGuid>{5284E913-6E16-401A-A189-9C9FFCDE1ABD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>uvhttp</RootNamespace>
+    <RootNamespace>libuv</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -52,9 +88,8 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <CompileAs>CompileAsC</CompileAs>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_WIN32_WINNT=0x0502;_GNU_SOURCE;DEBUG;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\src\libuv\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -69,9 +104,8 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <CompileAs>CompileAsC</CompileAs>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_WIN32_WINNT=0x0502;_GNU_SOURCE;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\src\libuv\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
