--- a/proj/win32/test.vcxproj
+++ b/proj/win32/test.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="..\..\src\test\main.c" />
     <ClCompile Include="..\..\src\test\test01.c" />
     <ClCompile Include="..\..\src\test\test02.c" />
+    <ClCompile Include="..\..\src\test\test03.c" />
     <ClCompile Include="..\..\src\test\unittest.c" />
   </ItemGroup>
   <ItemGroup>
