--- a/proj/win32/test.vcxproj
+++ b/proj/win32/test.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="..\..\src\test\test01.c" />
     <ClCompile Include="..\..\src\test\test02.c" />
     <ClCompile Include="..\..\src\test\test03.c" />
+    <ClCompile Include="..\..\src\test\test04.c" />
     <ClCompile Include="..\..\src\test\unittest.c" />
   </ItemGroup>
   <ItemGroup>
