--- a/proj/win32/test.vcxproj
+++ b/proj/win32/test.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="..\..\src\test\test04.c" />
     <ClCompile Include="..\..\src\test\test05.c" />
     <ClCompile Include="..\..\src\test\test06.c" />
+    <ClCompile Include="..\..\src\test\test07.c" />
     <ClCompile Include="..\..\src\test\unittest.c" />
   </ItemGroup>
   <ItemGroup>
