--- a/proj/win32/test.vcxproj
+++ b/proj/win32/test.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="..\..\src\test\test05.c" />
     <ClCompile Include="..\..\src\test\test06.c" />
     <ClCompile Include="..\..\src\test\test07.c" />
+    <ClCompile Include="..\..\src\test\test08.c" />
     <ClCompile Include="..\..\src\test\unittest.c" />
   </ItemGroup>
   <ItemGroup>
